Added Login Activity Added 2 xml for Login and Register Added Style for Login Activity Added animations for FlipperView Added Background Video Added Methods for login and register on Firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="login_email">Email</string>
+    <string name="login_pass">Password</string>
+    <string name="login_iniciarSesion">Iniciar Sesion</string>
+    <string name="confirmar_password">Confirmar password</string>
+    <string name="button">Button</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
 </resources>
