--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="button">Button</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="title_activity_enterprises">enterprises</string>
 </resources>
